<resources>
    <string name="app_name">Team Activity Viewer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_button">Login</string>
    <string name="login_username_placeholder">Username</string>
    <string name="login_password_placeholder">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="BaseUrl">https://finalwork-api.azurewebsites.net</string>
    <string name="events_button_name">Events</string>
    <string name="view_detail_name">Name</string>
    <string name="view_detail_description">Description</string>
    <string name="view_details_address">Address</string>
    <string name="view_event_subscribe">Subscribe</string>
    <string name="view_detail_periods">Periods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_location">My Location</string>
    <string name="home_image_description">home image</string>
    <string name="title_activity_main_activitybals">MainActivitybals</string>
    <string name="_title">Team APP</string>
    <string name="welcome_text">Welcome to our club and event tracking app! We\'re excited to help you keep track of all the clubs and events you\'re interested in. With our app, you can easily see a list of all the clubs and events you\'re subscribed to in one place. You can also view details about each club or event, including their schedule, location, and any important information you need to know. We hope our app helps you stay organized and involved in all the things you\'re passionate about. Thanks for using our app!</string>
</resources>